kubernetes/logout-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logout-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logout
  template:
    metadata:
      labels:
        app: logout
    spec:
      containers:
        - name: logout
          image: logout401:latest
          # readinessProbe:
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          #   httpGet:
          #      path: /logout
          #      port: 3001
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
