kubernetes/nginx-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: pingpong
          image: NGINX_IMAGE
          imagePullPolicy: IfNotPresent
