kubernetes/ping-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: pingpong401:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
