kubernetes/logout-svc.yaml
apiVersion: v1
kind: Service
metadata:
  # labels:
    name: logout-service
    # namespace: pinglog
spec:
  type: LoadBalancer
  selector:
    app: logout
  ports:
    - name: http
      # nodePort: 30080 
      protocol: TCP
      port: 4001
      targetPort: 3001
