kubernetes/ping-svc.yaml
apiVersion: v1
kind: Service
metadata:
  # labels:
    name: pingpong-service
    # namespace: pinglog
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - name: http
      # nodePort: 30080 
      protocol: TCP
      port: 4001
      targetPort: 3000
