kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /db
        pathType: Prefix
        backend:
          service:
            name: postgres-service
            port:
              number: 5432
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-service
            port:
              number: 4001
      - path: /logout
        pathType: Prefix
        backend:
          service:
            name: logout-service
            port:
              number: 4001
